--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@atproto/sync": "^0.1.4",
     "@atproto/syntax": "^0.3.0",
     "@atproto/xrpc-server": "^0.6.3",
+    "@skyware/jetstream": "^0.2.0",
     "better-sqlite3": "^11.1.2",
     "dotenv": "^16.4.5",
     "envalid": "^8.0.0",
@@ -30,7 +31,8 @@
     "kysely": "^0.27.4",
     "multiformats": "^9.9.0",
     "pino": "^9.3.2",
-    "uhtml": "^4.5.9"
+    "uhtml": "^4.5.9",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@atproto/lex-cli": "^0.4.1",
